# Tucil2_13521136

./: CMakeLists.txt  README.md
src/: getcpu.h  main.cpp  plot.cpp  plot.h  point.h  rand.h  sort.h
src/lib/cmake/Matplot++/: Matplot++Targets.cmake  matplot++-config.cmake
